Mudancas para se adequar a pep8 Novas funcoes para busca e metodos de acesso a tabelas  Changes to be committed: 	modified:   db_rendler.py 	modified:   models.py 	modified:   template/contato.html 	modified:   template/footer.html 	modified:   template/header.html 	modified:   views.py

--- a/template/header.html
+++ b/template/header.html
@@ -2365,8 +2365,11 @@
 
 	}
 </style>
-<header id="header">
-	<div class="inner">
+
+<div id="header-wrapper">
+<div class="container">
+	<header id="header">
+		<div class="inner">
 		<!-- Logo -->
 		<h1><a href="{{ url_for('template', filename='index.html') }}" id="logo">ZeroFour</a></h1>
 		<!-- Nav -->
@@ -2395,5 +2398,14 @@
 					<li><a href="no-sidebar.html">No Sidebar</a></li>
 		</ul>
 		</nav>
-	</div>
-</header>
+		</div>
+	</header>
+</div>
+</div>
+<div id="wrapper-style2">
+
+	<body>
+
+
+	</body>
+</div>
